@@ -169,5 +169,6 @@ Other Changes
     specific params, and adding an option to pick the output type. (hossman)
 12. Added new numeric build property "specversion" to allow clean
     MANIFEST.MF files (hossman)
+13. Added Solr/Lucene versions to "Info" page (hossman)
 
 2006/01/17 Solr open sourced, moves to Apache Incubator
